fix navbar z-index

--- a/drupal/sites/all/themes/epicgamejam/assets/sass/components/navbar.scss
+++ b/drupal/sites/all/themes/epicgamejam/assets/sass/components/navbar.scss
@@ -36,6 +36,11 @@ category: Components - Navbar
 ```
 */
 
+.navbar-default {
+  position: relative;
+  z-index: 20;
+}
+
 .navbar-default.container {
   @media only screen and (min-width: $screen-sm-min) {
     padding: 0;
